--- a/Api.POS.csproj
+++ b/Api.POS.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6" />
     <PackageReference Include="Npgsql" Version="9.0.3" />
+    <PackageReference Include="QuestPDF" Version="2025.12.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
   </ItemGroup>
 
